1) Fixed an issue where the Schema Diff Check icon beside filter options should not be visible if it is unselected. Fixes #7310 2) Fixed an issue where Reset Layout did not function and the Quick Search option under the Help menu displayed bullets. Fixes #7311

--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -1164,3 +1164,19 @@ select:-webkit-autofill:focus {
 .sql_textarea {
   height: 100%;
 }
+
+.visibility-hidden {
+  visibility: hidden;
+}
+
+ul {
+  margin-left: 0;
+  padding: 0;
+  cursor: default;
+}
+
+li {
+  padding: 0 0 0 0px;
+  list-style: none;
+  margin: 0;
+}
